Fix X overflow

--- a/public/global.css
+++ b/public/global.css
@@ -85,8 +85,8 @@ kbd {
 }
 
 body {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	background: #222;
 	color: white;
